--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <title>Suneel | Full-Stack Developer</title>
+    <title>Suneel | Senior Software-Engineer</title>
     <meta
       name="description"
       content="Clean, full‑screen portfolio with left sidebar, hero/about, split content, projects, and contact."
