--- a/index.html
+++ b/index.html
@@ -427,7 +427,7 @@
   </div>
           <div>
             <div class="name">Suneel</div>
-            <div class="role">Full‑Stack Developer</div>
+            <div class="role">Senior Software-Engineer</div>
           </div>
         </div>
         <nav aria-label="Primary">
